6Week/user-service/deployments/lb-user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-user-service-deployment
  labels: 
    app: lb
    service: user-service
    deployment: uat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lb
      service: user-service
  template:
    metadata:
      labels:
        app: lb
        service: user-service
    spec:
      containers:
      - name: lb-user-service
        image: gcr.io/tenacious-text-279818/lb-user-service
        imagePullPolicy: Always
        ports:
        - containerPort: 2006
        livenessProbe:
          httpGet:
            path: /health
            port: 2006
          initialDelaySeconds: 3
          periodSeconds: 
        readinessProbe:
          httpGet:
            path: /health
            port: 2006
          initialDelaySeconds: 3
          periodSeconds: 33
